# copilet_sonnet

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run_matrix.py  setup.py
config/: config.py
mocks/: __init__.py  mock_server.py
page_objects/: __init__.py  base_page.py  home_page.py
reports/: report.html
reports/allure-results/: 0271f199-72e1-46db-b8a8-fd1af8b36bd6-result.json  04008bf4-f842-4c2a-891a-3893aab24bc9-result.json  0651f849-bb35-49d6-8cde-3e9fc7a530eb-container.json  06695768-003e-4480-8eee-eaa2a578c464-container.json  0bf0a164-6ec7-4a59-86b1-fa293b1f9495-container.json  1c2e5dc4-415e-4c3e-bbbe-c3a442e6c13d-container.json  1d3a3302-d8e3-486c-8450-8832f131534e-container.json  26abfd40-a607-442b-ba96-833e420f1d52-container.json  2ea3e6cc-3c26-457f-9f1f-3166bc36ae3e-container.json  33d4c73c-a7e4-4e15-bff4-52005c58e20c-container.json  35ef3566-3f3f-4843-9b61-55992287cf0e-container.json  3ae7551f-7ad1-45b2-a4a1-c8d8c7b93fab-container.json  3bdde8a4-ea91-4a58-9b49-e70b90c64ca0-container.json  3e583558-af02-4548-942b-4f55c5955934-container.json  4aac3eb1-6086-460f-bd52-653e5bb19236-container.json  55c19ea9-5186-4c55-b18f-7773941e32ec-container.json  5d53291a-bede-4932-aa87-363038f5d1e1-container.json  63dee56c-e22b-49d9-8d67-0499f885871b-container.json  64e739f8-5b79-487f-aa7d-1fea7afc5de3-container.json  6a455855-ebf6-41d2-8a5b-d51f7ca560bd-container.json  6d7b844b-ce03-470d-a129-64aac35c8b19-container.json  (+34 more)
tests/: conftest.py
utils/: api_client.py  env_manager.py  test_data.py  test_matrix.py  visual_comparison.py
(+10 files in other folders)
