[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automation-framework"
version = "0.1.0"
authors = [
  { name = "Author", email = "author@example.com" },
]
description = "A modern test automation framework with Playwright"
readme = "README.md"
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
packages = [
    "config",
    "utils",
    "page_objects",
    "mocks",
    "tests"
]

[tool.pytest.ini_options]
addopts = "-v --html=reports/report.html --self-contained-html --alluredir=reports/allure-results"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "ui: UI tests using Playwright",
    "api: API tests",
    "visual: Visual comparison tests",
    "performance: Performance and benchmark tests",
    "smoke: Smoke tests",
    "regression: Regression tests"
]

[tool.coverage.run]
source = ["tests"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pylint]
max-line-length = 120
disable = ["C0111", "C0103"]